# promptstats

./: .gitignore  LICENSE  README.md  demo_analyze_multirun.py  demo_compare_models.py  demo_openai.py  pyproject.toml  requirements.txt
examples/: analyze_multirun_walkthrough.ipynb  compare_models_simple.py  compare_prompts_simple.py  delete_only_multirun.py  example_boolq_deepeval.py  factorial_rag_demo.py  sentiment.py  sentiment_manual_api_calls.py  sentiment_multirun.py  sentiment_ollama.py  synthetic_mean_advantage.py
promptstats/: __init__.py  cli.py  compare.py
promptstats/core/: mixed_effects.py  paired.py  ranking.py  resampling.py  router.py  summary.py  tokens.py  types.py  variance.py
promptstats/vis/: __init__.py  advantage.py  critical_difference.py
tests/: test_analyze.py  test_cli.py  test_compare_models.py  test_compare_prompts.py  test_lmm.py  test_wilson_newcombe.py
